Fixed/Extended database-browser - added multiselect to artist search (and many to come) - supports search for multiple...things - fixed spacing
- optimized for mobile, lol

--- a/src/app/components/database/database-browser/database-browser.component.scss
+++ b/src/app/components/database/database-browser/database-browser.component.scss
@@ -4,42 +4,47 @@
   }
 
 #database-browser-card {
-    min-width: 400px;
-  }
-  
-  #start-search-btn {
-    float: right;
-    margin-right: 50px;
-  }
+  min-width: 400px;
+}
 
-  #search-results-table {
-    width: 100%;
-    background: rgba(255,255,255,0.025);
-  }
-  #search-results-table td{
-    padding: 0 10px;
-  }
+#start-search-btn {
+  float: right;
+  margin-right: 50px;
+}
 
-  #search-results-table th {
-    padding: 0 10px;
-    font-size: 20px;
-  }
+#search-results-table {
+  width: 100%;
+  background: rgba(255,255,255,0.025);
+}
+#search-results-table td{
+  padding: 0 10px;
+}
 
-  mat-paginator {
-    background: rgb(255,255,255,0.025);
-  }
+#search-results-table th {
+  padding: 0 10px;
+  font-size: 20px;
+}
 
-  mat-form-field{
-    margin-left: 10px;
-    margin-right: 10px;
-  }
+mat-paginator {
+  background: rgb(255,255,255,0.025);
+}
 
-  mat-spinner{
-    float: right;
-    margin-top: 5px;
-    margin-right: 10px;
-  }
+mat-form-field{
+  margin-left: 10px;
+  margin-right: 10px;
+}
 
-  .hidden{
-    display: none;
-  }
+mat-spinner{
+  float: right;
+  margin-top: 5px;
+  margin-right: 10px;
+}
+
+.hidden{
+  display: none;
+}
+.chip-wrapper-width-contained{
+  max-width: 450px;
+  margin-right: 10px;
+  margin-left: 10px;
+}
